[gd_scene load_steps=5 format=3 uid="uid://bmsqxk7qw1bd0"]

[ext_resource type="Script" uid="uid://cdxpf617wcyde" path="res://scenes/CharSelect/CharacterSelectScreen.gd" id="1_jvmhw"]
[ext_resource type="Resource" uid="uid://dbgquedjcu78p" path="res://data/classes/Tank.tres" id="2_g2f6r"]
[ext_resource type="Texture2D" uid="uid://dxwv0ss2gox45" path="res://art/icons/20.png" id="2_kga5u"]
[ext_resource type="Resource" uid="uid://bqaye7oh04v8p" path="res://data/classes/Paladin.tres" id="3_tof21"]

[node name="CharacterSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvmhw")
character_class = ExtResource("2_g2f6r")
character_subclass = ExtResource("3_tof21")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Vyber si hrdinu\""

[node name="CharactersContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PaladinPanel" type="PanelContainer" parent="VBoxContainer/CharactersContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CharactersContainer/PaladinPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CharactersContainer/PaladinPanel/VBoxContainer"]
layout_mode = 2
text = "Paladin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait" type="TextureRect" parent="VBoxContainer/CharactersContainer/PaladinPanel/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_kga5u")

[node name="LevelLabel" type="Label" parent="VBoxContainer/CharactersContainer/PaladinPanel/VBoxContainer"]
layout_mode = 2
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Pokračovat"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Zpět"
